--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-My GitHub Page
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>GA Measurement Protocol Tool</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/pure/0.4.2/pure-min.css" />
+        <link rel="stylesheet" href="css/main.css" />
+    </head>
+    <body>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-15388732-7', 'xu-li.github.io');
+          ga('send', 'pageview');
+
+        </script>
+
+        <div id="menu">
+            <div class="pure-menu pure-menu-open">
+                <h1 class="pure-menu-heading">GA MP Tool<small>by xu.li</small></h1>
+
+                <ul id="sections">
+                </ul>
+            </div>
+        </div>
+
+
+        <div id="content">
+            <h2>Preview</h2>
+            <div id="preview" contenteditable="true">
+
+            </div>
+            <div class="container-submit">
+                <button id="btn-submit" class="pure-button pure-button-primary">Send</button>
+            </div>
+
+            <form id="form" class="pure-form">
+                <fieldset>
+                </fieldset>
+            </form>
+            
+        </div>
+
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script src="js/app.js"></script>
+  </body>
+</html>
